--- a/flex & grid/css/style.css
+++ b/flex & grid/css/style.css
@@ -1,38 +1,22 @@
 body {
-  font-size: 1.5rem;
   margin: 0;
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  background-color: gray;
-  height: 100vh;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  margin: 0;
 }
 .container .item {
-  border: 1px solid black;
-  background-color: yellowgreen;
+  background-color: greenyellow;
 }
 .container .item img {
-  background-color: yellowgreen;
+  border: 1px solid black;
   max-width: 100px;
   max-height: 100px;
 }
-.container .item p {
-  background-color: yellowgreen;
-}
-.container .item:nth-child(1) {
-  flex: 1;
-  order: 1;
-}
-.container .item:nth-child(2) {
-  flex: 2;
-  order: 3;
-}
-.container .item:nth-child(3) {
-  flex: 1;
-  order: 2;
+.container .item:nth-child(odd) {
+  background-color: crimson;
 }
 
 /*# sourceMappingURL=style.css.map */
